# teste-lacrei

./: Dockerfile  db.sqlite3  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
core/: models.py  serializers.py  test_models.py  urls.py  views.py
core/migrations/: 0001_initial.py
lacreisaude/: asgi.py  settings.py  urls.py  wsgi.py
