[project]
name = "lacreisaude"
version = "0.1.0"
description = ""
authors = [
    {name = "catharinapc",email = "catharinaperdigaoc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django (>=5.2,<6.0)",
    "djangorestframework (>=3.16.0,<4.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)"
]

[tool.poetry]
name = "lacreisaude"
version = "0.1.0"
description = ""
authors = ["Seu Nome <seu@email.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-django = "^4.11.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
